# instant-screen-narrator

./: .gitignore  Cargo.toml  README.md  WWM Translator.lnk  build.rs  config.json  config.txt  debug.txt  overlay.txt  repomix-output.xml  requirements.txt  run_exe.vbs  run_translator.bat  run_translator.vbs  screen_translator.py  screen_translator.spec
screen_translator/: Cargo.toml  build.rs
screen_translator/src/: capture.rs  config.rs  main.rs  translation.rs
src/: capture.rs  config.rs  key_utils.rs  main.rs  overlay.rs  translation.rs  tts.rs  ui.rs
