[package]
name = "screen_translator"
version = "0.1.0"
edition = "2021"

[build-dependencies]
winres = "0.1"

[dependencies]
eframe = "0.27"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
webbrowser = "0.8"
screenshots = "0.8"
image = "0.24"
base64 = "0.22"
rodio = "0.19"
urlencoding = "2.1"
regex = "1.10"
global-hotkey = "0.5"
rdev = "0.5"
winapi = { version = "0.3", features = ["winuser", "libloaderapi", "shellapi", "wingdi", "windef", "minwindef"] }
tray-icon = "0.14"
futures = "0.3"
rfd = "0.12"
arboard = "3.3"